--- a/css/steps.css
+++ b/css/steps.css
@@ -144,7 +144,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: calc(64px + var(--space-3xl)) var(--space-lg) var(--space-3xl);
+  padding: calc(64px + var(--space-3xl) + 80px) var(--space-lg) var(--space-3xl);
   max-width: 1120px;
 }
 
